test/expected/using_sti.out
using SI = static int
           ^
12: error: "typedef static int" is illegal for built-in type
